fixed spacing

--- a/src/styles/TableData.module.css
+++ b/src/styles/TableData.module.css
@@ -44,27 +44,27 @@
 /* Column widths */
 .table td:nth-child(1),
 .table th:nth-child(1) {
-  width: 12%;
+  width: 15%;
 }
 
 .table td:nth-child(2),
 .table th:nth-child(2) {
-  width: 15%;
+  width: 10%; /* Adjusted width for company column */
 }
 
 .table td:nth-child(3),
 .table th:nth-child(3) {
-  width: 10%;
+  width: 14%; /* Adjusted width for website column */
 }
 
 .table td:nth-child(4),
 .table th:nth-child(4) {
-  width: 8%;
+  width: 10%;
 }
 
 .table td:nth-child(5),
 .table th:nth-child(5) {
-  width: 5%;
+  width: 8%;
 }
 
 .table td:nth-child(6),
@@ -74,12 +74,17 @@
 
 .table td:nth-child(7),
 .table th:nth-child(7) {
-  width: 7%;
+  width: 5%;
 }
 
 .table td:nth-child(8),
 .table th:nth-child(8) {
-  width: 5%;
+  width: 7%;
+}
+
+.table td:nth-child(9),
+.table th:nth-child(9) {
+  width: 5%; /* Adjusted width for actions column */
 }
 
 
